# idfkit-docs

./: .gitignore  CLAUDE.md  CNAME  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml  versions.json  zensical.toml
.claude/: launch.json
.devcontainer/: devcontainer.json
.github/workflows/: check-new-release.yml  convert-docs.yml  main.yml  on-release-main.yml  pr-docs-preview.yml
docs/: index.md  modules.md
idf-editor/: package-lock.json  package.json  tsconfig.json  vite.config.ts
idf-editor/src/: editor-manager.ts  idd-schema-loader.ts  idf-editor.css  idf-folding-provider.ts  idf-hover-service.ts  idf-language.ts  idf-themes.ts  main.ts  types.ts
scripts/: config.py  convert.py  convert_all.py  idd_parser.py  idd_schema_builder.py  latex_preprocessor.py  markdown_postprocessor.py  models.py  nav_generator.py  pygments_idf_lexer.py  schema_utils.py  version_manager.py
scripts/assets/: idf-editor.css  idf-editor.js  idf-fields.css
scripts/pandoc_filters/: energyplus.lua
tests/: test_foo.py
v22.1/: 404.html  index.html  sitemap.xml
v22.1/acknowledgments/: index.html
v22.1/assets/: idd-schema.json
v22.2/: 404.html  index.html
v23.1/: 404.html  index.html  sitemap.xml
v23.2/: 404.html  index.html  sitemap.xml
v24.1/: 404.html  index.html  sitemap.xml
v24.2/: 404.html  index.html
v25.1/: 404.html  index.html
v25.2/: 404.html  index.html  sitemap.xml
v8.9/: 404.html  index.html  sitemap.xml
v9.0/: 404.html  index.html  sitemap.xml
v9.1/: 404.html  index.html  sitemap.xml
v9.2/: 404.html  index.html
v9.3/: 404.html  index.html  sitemap.xml
v9.4/: 404.html  index.html
v9.5/: 404.html  index.html  sitemap.xml
v9.6/: 404.html  index.html
(+10792 files in other folders)
