[project]
name = "idfkit-docs"
version = "0.0.1"
description = "EnergyPlus documentation built with Zensical"
authors = [{ name = "Samuel Letellier-Duchesne", email = "samuelduchesne@me.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "tomli_w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://docs.idfkit.com/"
Repository = "https://github.com/samuelduchesne/idfkit-docs"
Documentation = "https://docs.idfkit.com/"

[dependency-groups]
dev = [
    "zensical>=0.0.23",
    "pre-commit>=2.20.0",
    "ruff>=0.11.5",
    "pypandoc>=1.14",
    "tomli_w>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project.entry-points."pygments.lexers"]
idf = "scripts.pygments_idf_lexer:IDFLexer"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # subprocess with partial executable path (intentional CLI tool calls)
    "S607",
    # subprocess call check (intentional CLI tool calls)
    "S603",
]

[tool.ruff.format]
preview = true
